Fix bug where on small screen sizes notes panel would "jump"
It used to jump whenever there is a loader is visible.

--- a/src/app/components/loader/loader.component.sass
+++ b/src/app/components/loader/loader.component.sass
@@ -1,7 +1,8 @@
 @import 'colors'
 @import 'sizes'
 
-
+:host
+    width: 36px
 
 
 .lds-ring
